test-cases/negative/test_041_invalid_string_literal.lay
# negative test: invalid string literal
# expected: error should be thrown

the variable x of type String is 'unclosed string


